--- a/src/styles/pcard.module.css
+++ b/src/styles/pcard.module.css
@@ -1,5 +1,20 @@
 .pcard {
-    height: 100px;
-    width: 100px;
-    background-color: red;
+	padding: 3%;
+	margin: 3%;
+	height: 400px;
+	background-color: rgb(255, 255, 255);
+	width: 95%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+}
+
+.pcard img {
+	max-height: 90%;
+}
+
+.pcard p {
+	font-size: 50px;
+	padding: 2%;
 }
